--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "eslint-config-next": "13.1.1",
     "html-react-parser": "^3.0.8",
     "next": "13.1.1",
-    "next-auth": "^4.18.8",
+    "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
